Improve admin views

--- a/src/Squazic/HighlineGuideBundle/Resources/views/Default/login.html.twig
+++ b/src/Squazic/HighlineGuideBundle/Resources/views/Default/login.html.twig
@@ -1,3 +1,6 @@
+{% extends 'SquazicHighlineGuideBundle::admin.html.twig' %}
+
+{% block content %}
     <h1 class="title">Login</h1>
 
     <p>
@@ -27,3 +30,4 @@
             </span>
         </button>
     </form>
+{% endblock %}
