--- a/src/Squazic/HighlineGuideBundle/Resources/views/Artist/edit.html.twig
+++ b/src/Squazic/HighlineGuideBundle/Resources/views/Artist/edit.html.twig
@@ -1,3 +1,6 @@
+{% extends 'SquazicHighlineGuideBundle::admin.html.twig' %}
+
+{% block content %}
 <h1>Artist edit</h1>
 
 <form action="{{ path('artist_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
@@ -20,3 +23,4 @@
         </form>
     </li>
 </ul>
+{% endblock %}
