--- a/src/Squazic/HighlineGuideBundle/Resources/views/Artist/index.html.twig
+++ b/src/Squazic/HighlineGuideBundle/Resources/views/Artist/index.html.twig
@@ -1,3 +1,6 @@
+{% extends 'SquazicHighlineGuideBundle::admin.html.twig' %}
+
+{% block content %}
 <h1>Artist list</h1>
 
 <table class="records_list">
@@ -35,3 +38,4 @@
         </a>
     </li>
 </ul>
+{% endblock %}
