--- a/src/Squazic/HighlineGuideBundle/Resources/views/Artist/new.html.twig
+++ b/src/Squazic/HighlineGuideBundle/Resources/views/Artist/new.html.twig
@@ -1,3 +1,6 @@
+{% extends 'SquazicHighlineGuideBundle::admin.html.twig' %}
+
+{% block content %}
 <h1>Artist creation</h1>
 
 <form action="{{ path('artist_create') }}" method="post" {{ form_enctype(form) }}>
@@ -14,3 +17,4 @@
         </a>
     </li>
 </ul>
+{% endblock %}
