--- a/src/Squazic/HighlineGuideBundle/Resources/views/Artwork/index.html.twig
+++ b/src/Squazic/HighlineGuideBundle/Resources/views/Artwork/index.html.twig
@@ -1,3 +1,6 @@
+{% extends 'SquazicHighlineGuideBundle::admin.html.twig' %}
+
+{% block content %}
 <h1>Artwork list</h1>
 
 <table class="records_list">
@@ -41,3 +44,4 @@
         </a>
     </li>
 </ul>
+{% endblock %}
