--- a/src/Squazic/HighlineGuideBundle/Resources/views/Artwork/show.html.twig
+++ b/src/Squazic/HighlineGuideBundle/Resources/views/Artwork/show.html.twig
@@ -1,3 +1,6 @@
+{% extends 'SquazicHighlineGuideBundle::admin.html.twig' %}
+
+{% block content %}
 <h1>Artwork</h1>
 
 <table class="record_properties">
@@ -43,3 +46,4 @@
         </form>
     </li>
 </ul>
+{% endblock %}
