--- a/src/Squazic/HighlineGuideBundle/Resources/views/Default/index.html.twig
+++ b/src/Squazic/HighlineGuideBundle/Resources/views/Default/index.html.twig
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>High Line Park Map Guide</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <style type="text/css">
       html { height: 100% }
